Fixed the one-to-many issue for the timeslots entity